[gd_scene load_steps=11 format=3 uid="uid://bwd3baj22j038"]

[ext_resource type="Script" uid="uid://6ygx55482asi" path="res://scripts/start_menu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://6kdml2d3hfgd" path="res://UI/bg_flow.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ocvghj2ylk87" path="res://UI/sunset.png" id="3"]
[ext_resource type="Texture2D" uid="uid://8fqb1jctjwhr" path="res://UI/gradient.png" id="4"]
[ext_resource type="Texture2D" uid="uid://nlw7vd0ccgt6" path="res://UI/logo.png" id="5"]
[ext_resource type="Theme" uid="uid://byjjitw1nl3mo" path="res://theme/base_theme.tres" id="6"]
[ext_resource type="Texture2D" uid="uid://7f8ocl8rcxmy" path="res://UI/Gear.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cpewp6q6jbuba" path="res://UI/lang.png" id="8"]

[sub_resource type="Shader" id="Shader_476g4"]
code = "shader_type canvas_item;
uniform sampler2D flow : source_color, repeat_enable;
uniform float shift;
uniform float alpha: hint_range(0.0, 1.0, 0.1) = 1.0;
void fragment() {
	float time = TIME + shift / 30.0;
	vec4 main_texture = texture(flow, UV + (vec2(0.1 * time * -0.05, (UV[0]-0.5) * cos(time/20.0)/2.0)));
	main_texture.rbg = vec3(sin(time/4.0)/2.0+1.0, cos(time/4.0)/2.0+1.0, 0.7);
	main_texture.rbg = main_texture.rbg/6.0;
	main_texture.rbg = main_texture.rbg +(2.0*UV[0] + UV[1])/15.0;
	main_texture.a = main_texture.a * alpha;
	COLOR = main_texture;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54pex"]
resource_local_to_scene = true
shader = SubResource("Shader_476g4")
shader_parameter/flow = ExtResource("2")
shader_parameter/shift = 0.0
shader_parameter/alpha = 1.0

[node name="StartMenu" type="TextureRect"]
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1")

[node name="Flow" type="ColorRect" parent="."]
modulate = Color(100, 100, 100, 1)
self_modulate = Color(100, 100, 100, 1)
material = SubResource("ShaderMaterial_54pex")
layout_mode = 0
offset_left = -19.0
offset_top = 117.0
offset_right = 1941.0
offset_bottom = 776.0
color = Color(100, 100, 100, 1)

[node name="bgColor" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -162.0
offset_top = -90.0
offset_right = 2064.0
offset_bottom = 1170.0
color = Color(0, 0, 0, 1)

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("3")
stretch_mode = 4

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.788235)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource("4")

[node name="Trizon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 204.0
offset_right = 488.0
offset_bottom = 413.0
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 5

[node name="Story" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 128.0
offset_top = 776.0
offset_right = 512.0
offset_bottom = 872.0
text = "STORYMODE"

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_top = 448.0
offset_right = 645.0
offset_bottom = 527.0
text = "CONTINUE"

[node name="Collection" type="Button" parent="."]
layout_mode = 0
offset_top = 527.0
offset_right = 645.0
offset_bottom = 606.0
text = "COLLECTION"

[node name="Tutorial" type="Button" parent="."]
layout_mode = 0
offset_top = 606.0
offset_right = 645.0
offset_bottom = 685.0
text = "TUTORIAL"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_top = 685.0
offset_right = 419.0
offset_bottom = 764.0
alignment = 2
item_count = 3
popup/item_0/text = "简体中文    "
popup/item_1/text = "English     "
popup/item_1/id = 1
popup/item_2/text = "日本語      "
popup/item_2/id = 2

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_top = 764.0
offset_right = 645.0
offset_bottom = 843.0
text = "SAVEQUIT"

[node name="OpenEsu" type="Button" parent="."]
layout_mode = 0
offset_left = 1853.0
offset_top = 28.0
offset_right = 1898.0
offset_bottom = 66.0
theme = ExtResource("6")
theme_override_font_sizes/font_size = 25
flat = true

[node name="TextureRect" type="TextureRect" parent="OpenEsu"]
modulate = Color(0.775063, 0.775063, 0.775063, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 607.0
offset_top = 450.0
offset_right = 1901.0
offset_bottom = 1056.0
theme_override_font_sizes/font_size = 30
text = "此版本的内容截止于第三层末尾，有许多卡图还未来得及画，敬请见谅 orz
如有bug，闪退，卡顿，渲染问题，或者任何想法，欢迎加入QQ或Discord群鞭策我……
感谢所有愿意包容并体验此版本的伟大玩家们，真的非常感谢你们的支持！

This version ends at the third level, and some card artwork is still in progress.
If you encounter any bugs, crashes, lag, rendering issues, or have any suggestions, 
feel free to join my Discord group to share your feedback!
To all the amazing players who are willing to bear with these issues and still play the game, 
I sincerely thank you for your support!

日本語のローカライズはまだ準備ができていません。すみませんでした。。。"

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 1339.0
offset_top = 24.0
offset_right = 1840.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
text = "Language can be changed here ->"

[node name="TextureRect3" type="TextureRect" parent="."]
self_modulate = Color(0.82606, 0.82606, 0.82606, 1)
layout_mode = 0
offset_left = 183.0
offset_top = 685.0
offset_right = 229.0
offset_bottom = 764.0
mouse_filter = 2
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Collection" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OpenEsu" to="." method="_on_open_esu_pressed"]
